AC_REVISION($Id$)

AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(JJTraveler,0.4.3)
AC_PREREQ(2.59)

AC_SUBST(JAVA_SUBDIRS)
AC_JAVA_OPTIONS
JAVAC=javac
AC_CHECK_CLASSPATH
AC_PROG_JAVAC
AC_PROG_JAVA
AC_PROG_JAVADOC
AC_SUBST(CLASSPATH)

AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROGS(SH, sh)

AC_CONFIG_FILES([
  Makefile 
  VERSION 
  scripts/Makefile
  jars/Makefile
  src/Makefile 
  src/templates/Makefile
  src/jjtraveler/Makefile
  src/jjtraveler/reflective/Makefile
  src/jjtraveler/graph/Makefile
  src/jjtraveler/util/Makefile
])
AC_OUTPUT
