AC_REVISION($Id$)

AC_INIT
AC_CONFIG_SRCDIR([configure.in])
GLT_INIT_PACKAGE
AC_PREREQ(2.59)

AM_MAINTAINER_MODE

AC_SUBST(JAVA_SUBDIRS)
AC_JAVA_OPTIONS
JAVAC=javac
AC_CHECK_CLASSPATH
AC_PROG_JAVAC
AC_PROG_JAVA
AC_PROG_JAVADOC

JUNIT='$(CLASSPATH_ENV) $(JAVA) $(JAVAFLAGS) junit.textui.TestRunner'
JAVA_JUNIT='$(JAVA_JUNIT)'
TESTS_JUNIT='$(TESTS_JUNIT)'
AC_SUBST(JUNIT)
AC_SUBST(JAVA_JUNIT)
AC_SUBST(TESTS_JUNIT)

AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROGS(SH, sh)

AC_CONFIG_FILES([
  Makefile 
  VERSION 
  scripts/Makefile
  doc/Makefile
])
AC_OUTPUT
