SUBDIRS=@JJT_TESTS@

java_JAVA =\
	Visited.java\
	NotVisited.java\
	IsTree.java\
	IsDag.java\
	ASTToGraph.java\
	Graph.java\
	MkEdgesToKids.java\
	EdgesGraph.java\
	MkEdgeFromParent.java\
	ToGraph.java\
	WhileNotVisited.java 

javapackage	= jjtraveler.graph
javadir		= ${prefix}/classes/jjtraveler/graph
JAVAROOT	= ${top_builddir}/src
JAVASRCROOT	= ${top_srcdir}/src

EXTRA_DIST	= package.html

JAVACC      = @JAVACC@
